# OpenExanodes

./: .travis.yml  ABOUT  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  CompileCommandLine.cmake  Doxyfile.in  FindNetSnmp.cmake  FindOpenSSL.cmake  FindSELinux.cmake  KernelModule.cmake  Makefile.am  Makefile.in  README  README.md  UnitTest.cmake  aclocal.m4  autogen.sh  branch.keira  codecov.sh  config.h.in  configure  configure.in  configure.scan  drivefusion.spec.in  exanodes-policy-no-iobarriers.spec  exanodes-policy.spec  exanodes.spec.in  exanodes_installation_directories.txt  exanodes_release_notes.txt  index.html  intltool-update  params.json  valgrind-glibc.supp
adm/new_scripts/: Makefile.am  Makefile.in  clcommun.pl  commun.pm  constantes.pm.in  dataaccess.c  dataaccess.h  devinfo.c  driveFUSION.conf  fusion_clcreate.pl  fusion_clinfo.pl  fusion_clstart.pl  fusion_clstop.pl  fusion_dgcreate.pl  fusion_dgdelete.pl  fusion_dgstart.pl  fusion_dgstop.pl  fusion_vlcreate.pl  fusion_vldelete.pl  fusion_vlresize.pl  fusion_vlstart.pl  fusion_vlstop.pl  raz_sbg_rdev.c  test_parsing.pl  testlock.c  uuid.c  uuid.h  vrt_superblock.h
admind/: CMakeLists.txt
admind/include/: evmgr_pub_events.h  service_fs_commands.h  service_lum.h  service_vrt.h
admind/services/: CMakeLists.txt  admind.c  csupd.c  csupd.h
admind/src/: CMakeLists.txt  adm_atomic_file.c  adm_atomic_file.h  adm_cache.c  adm_cache.h  adm_cluster.c  adm_cluster.h  adm_command.c  adm_command.h  adm_deserialize.c  adm_deserialize.h  adm_disk.c  adm_disk.h  adm_error.h  adm_file_ops.c  adm_file_ops.h  adm_fs.c  adm_fs.h  adm_globals.c  adm_globals.h  adm_group.c  adm_group.h  adm_hostname.c  adm_hostname.h  adm_incarnation.c  adm_incarnation.h  adm_license.c  adm_license.h  adm_monitor.c  adm_monitor.h  adm_nic.c  adm_nic.h  adm_node.c  adm_node.h  adm_nodeset.c  adm_nodeset.h  adm_serialize.c  adm_serialize.h  adm_service.c  adm_service.h  (+25 more)
admind/sys_service/: CMakeLists.txt
admind/test/: CMakeLists.txt  test.conf.tmpl  ut_adm_cluster.c  ut_adm_deserialize.c  ut_adm_file_ops.c  ut_adm_hostname.c  ut_adm_license.c  ut_adm_nic.c  ut_adm_nodeset.c  ut_adm_tunelist.c  ut_adm_xml.c  ut_service_parameter.c  ut_vrt_layout.c
blockdevice/src/: CMakeLists.txt  blockdevice.c  blockdevice_stream.c  sys_blockdevice.c
blockdevice/test/: CMakeLists.txt  ut_blockdevice.c  ut_blockdevice_stream.c  ut_sys_blockdevice.c
common/: CMakeLists.txt
common/include/: checksum.h  daemon_api_client.h  daemon_api_server.h  daemon_request_queue.h  exa_assert.h  exa_config.h  exa_constants.h  exa_conversion.h  exa_env.h  exa_error.h  exa_math.h  exa_mkstr.h  exa_names.h  exa_nbd_list.h  exa_nodeset.h  exa_perf_instance.h  exa_select.h  exa_socket.h  exa_system.h  exa_thread_name.h  exa_version.h  threadonize.h  uuid.h
common/lib/: CMakeLists.txt  checksum.c  daemon_api_lightclient.c  daemon_api_server.c  daemon_request_queue.c  exa_common_kernel.c  exa_common_kernel.h  exa_config.c  exa_conversion.c  exa_env.c  exa_error.c  exa_names.c  exa_nbd_list.c  exa_nodeset.c  exa_perf_instance.c  exa_select.c  exa_select_kernel.c  exa_select_kernel.h  exa_socket.c  exa_socket_kernel.c  exa_socket_kernel.h  exa_system.c  exa_thread_name.c  exa_thread_name_kernel.c  exa_thread_name_kernel.h  exa_version.c  threadonize.c  uuid.c
common/perl/: CMakeLists.txt  constantes2.pm.in
common/test/: CMakeLists.txt  exatest.h  exatest_lib.c  ut_checksum.c  ut_exa_conversion.c  ut_exa_env.c  ut_exa_nbd_list.c  ut_exa_nodeset.c  ut_exa_version.c  ut_pid_file.c  ut_uuid.c
csupd/src/: CMakeLists.txt  exa_csupd.c  sup_clique.c  sup_clique.h  sup_cluster.c  sup_cluster.h  sup_debug.c  sup_debug.h  sup_examsg.c  sup_ping.h  sup_sim.c  sup_view.c  sup_view.h
csupd/test/: CMakeLists.txt  sup_helpers.c  sup_helpers.h  ut_sup_clique.c  ut_sup_cluster.c  ut_sup_helpers.c  ut_sup_view.c
dkms/: CMakeLists.txt  Makefile  Makefile.dkms.in  copy_symvers  dkms.conf.in
examsg/src/: CMakeLists.txt  examsgapi.c  gen_examsg_name_tab.pl  mailbox.c  mailbox.h  objpoolapi.c  objpoolapi.h  ringbuf.c  ringbuf.h
examsg/test/: CMakeLists.txt  examsgtest.h  ut_examsgapi.c  ut_mailbox.c  ut_objpool.c  ut_ringbuf.c
examsgd/: CMakeLists.txt  examsgd.c  examsgd.h  examsgd_client.c  examsgd_client.h  iface.c  iface.h  network.c  network.h
exaperf/src/: CMakeLists.txt  exaperf.c  exaperf_config.c  exaperf_config.h  exaperf_core.c  exaperf_core.h  exaperf_counter.c  exaperf_counter.h  exaperf_distribution.c  exaperf_distribution.h  exaperf_duration.c  exaperf_duration.h  exaperf_filter.c  exaperf_filter.h  exaperf_repart.c  exaperf_repart.h  exaperf_sample.c  exaperf_sample.h  exaperf_sensor.c  exaperf_sensor.h  exaperf_sensor_template.c  exaperf_sensor_template.h  exaperf_stats.c  exaperf_stats.h  exaperf_time.c  exaperf_time.h  exaperf_timeframe.c  exaperf_timeframe.h  exaperf_tools.c  exaperf_tools.h
exaperf/test/: CMakeLists.txt  extern_test_1.c  extern_test_2.c  ut_exaperf.c  ut_exaperf_config.c  ut_exaperf_core.c  ut_exaperf_counter.c  ut_exaperf_duration.c  ut_exaperf_filter.c  ut_exaperf_flush.c  ut_exaperf_repart.c  ut_exaperf_sample.c  ut_exaperf_sensor.c  ut_exaperf_sensor_template.c  ut_exaperf_stats.c  ut_exaperf_template.c  ut_exaperf_tools.c
fs/exa_fsd/: CMakeLists.txt  exa_fsscript.in
fs/tools/: CMakeLists.txt  exa_fstool.c
log/src/: CMakeLists.txt  fake_log.c  logapi.c  logd.c  logd.h  logd_com.h  logd_com_examsg.c
monitoring/: CMakeLists.txt
monitoring/common/: CMakeLists.txt
monitoring/md_com/: CMakeLists.txt
monitoring/tools/: trans_md_enum.pl  transtrap.pl
os/: CMakeLists.txt
os/include/: os_assert.h  os_atomic.h  os_compiler.h  os_completion.h  os_dir.h  (+26 more)
sysconfig/: CMakeLists.txt
tools/: CMakeLists.txt  Makefile.am  Makefile.in  c_define_2_perl.pl  c_error_2_perl.pl  cov.pl  exa_batch_cleanup  exa_batch_init  exa_code_coverage  exa_enable_valgrind  exa_esx_init.pl  exa_gdb  exatest_kill  exatest_kill.bat  generate_date_ent.pl  generate_git_h.pl  generate_kbuild_26.sh  pushexa.pl  pushexawin.pl  pushxen  update_debian_changelog.pl
(+993 files in other folders)
